
===========================
HDF5 libraries tested:
===========================
This release has been tested against data files generated by HDF5 1.8.7 and
HDF5 1.6.10.

===================
Platforms tested:
===================
Linux 2.6 (32/64bits), Solaris 10 (32/64bits), FreeBSD 6.3 (32/64bits)

=================================
Changes since version "2.0"
=================================
- 2011-3-7 by vchoi
    Fix for bug #2175 so that test/testgen.c can be compiled correctly.
    (H5Z_class2_t versus H5Z_class_t)

- 2010-11-12 by vchoi
    Modifications to allow the validation of external links existing in a file.
    One new option is added to turn on the validation.

- 2010-10-19 by vchoi
    Modifications to resolve memory leaks as reported by valgrind.
    Fixes: 1) hardlink was not correctly handled and validated
	   2) btree_k[] was not initialized properly in check_superblock()
	   3) modified routines for handling the table of hard links

===============
Known problems
===============
- The following platforms may produce an h5check executable that is 32bit
  based and is not able to handle HDF5 files larger than 2GB. The following
  instructions show how to configure h5check to handle large file support:

  For Linux:
     % env CFLAGS="-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE" ./configure

  For Solaris:
     % env CC="cc -m64" ./configure

%%%2.0%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%

This is V2.0 release of the HDF5 format checker.  This document describes the
changes between releases.

Changes since version "1.0-post0"
=================================

- 2010-04-19 by acheng
    Ported to Solaris 10, 64bit.

- 2010-03-24 by vchoi
    Bug fix:
	Fixed failure on "duty":
	Free memory allocated for direct block after it was done.

- 2010-03-17 by vchoi
    1. Fix for chicago bug from master_REUTERS_ASIA.h5.bad:
	Add callbacks to validate indexed group and indexed attribute messages